# kalman_stock_prediction

./: .gitignore  LICENSE.md  README.md  main.py  pyproject.toml  requirements.txt
_system/: log_config.py
app/: __init__.py  agent.py  streamlit_app.py
conf/base/: catalog.yml  parameters.yml
data/raw/: AMZN.csv
documents/: ARTICLE_CONTENTS.md  PLAN.md  PRESENTATION_PLAN.md
documents/article/: main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.lof  main.lot  main.out  main.synctex(busy)  main.tex  main.toc  references.bib
models/base_model/: best_params.json  model.pth  test_metrics.json  train_metrics.json
models/enhanced_model/: best_params.json  model.pth  test_metrics.json  train_metrics.json
models/kalman_model/: best_params.json  model.pth  test_metrics_filtered.json  test_metrics_original.json  train_metrics.json
notebooks/: enhanced_model.ipynb
src/app/: base_model.ipynb  enhanced_model.ipynb  kalman_model.ipynb  main.py  prepare_enhanced.py  prepare_standard.py
src/app/config/: logging_config.json
src/app/core/: data_preparator.py  data_repository.py  dataset.py  stock_data_repository.py
src/app/models/: base_model.py  lstm_model.py
src/app/repo/: AAPL.csv  AMZN.csv  AMZN_enhanced.csv  IBM.csv
src/app/tools/: log_controller.py
src/kalman_stock_prediction/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/kalman_stock_prediction/models/: data_visualizer.py  dataset.py  lstm_model.py  matplotlib_dataset.py  pytorch_model_dataset.py
src/tests/: test_reformat.py
src/tests/repo/: test_dataframe_in.csv  (+2 more)
(+10 files in other folders)
